--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -6,36 +6,56 @@
   ],
 
   "branchPrefix": "grafanarenovatebot/",
-  // Used when renovate runs as a github app.
-  // https://docs.renovatebot.com/configuration-options/#platformcommit
-  // Setting platformCommit to `true`, as required by Grafana policy, seems to make renovate think all PRs are modified,
-  // as the dynamic author configured by github does not match the author set in `gitAuthor`. It is recommended to
-  // leave it unset: https://github.com/renovatebot/renovate/discussions/29106.
+  "commitMessagePrefix": "Chore: ",
   "platformCommit": true,
   "dependencyDashboard": false,
   "forkProcessing": "disabled",
+  "rebaseWhen": "behind-base-branch",
+  "prHourlyLimit": 0,
+  "prConcurrentLimit": 10,
+  "branchConcurrentLimit": 10,
+
+  "enabledManagers": ["custom.regex", "gomod"],
+
   "labels": ["dependencies"],
+
+  "gomod": {
+    "enabled": true
+  },
 
   "postUpdateOptions": [
     "gomodTidyE"
   ],
 
-  "packageRules" : [
+  "packageRules": [
     {
-      // Non-versioned go modules are noisy, with almost daily updates. We throttle them a bit.
       "matchManagers": ["gomod"],
       "matchUpdateTypes": ["digest"],
-      "schedule": "before 8am on monday every 2 weeks",
+      "schedule": "before 8am on monday every 2 weeks"
     },
     {
-      // Group prometheus-go updates, so prometheus-common is in sync with client-go.
       "matchManagers": ["gomod"],
       "matchPackageNames": "github.com/prometheus/*",
       "groupName": "prometheus-go"
-    },
+    }
   ],
 
   "customManagers": [
+    {
+      "customType": "regex",
+      "datasourceTemplate": "docker",
+      "versioningTemplate": "semver",
+      "registryUrlTemplate": "https://ghcr.io",
+      "fileMatch": [
+        "(^|/)Makefile$",
+        ".*\\.jsonnet$",
+        ".*\\.mk$",
+        "^\\.github/workflows/.*\\.ya?ml$"
+      ],
+      "matchStrings": [
+        "\\bghcr\\.io/(?<depName>grafana/grafana-build-tools):(?<currentValue>v\\d+\\.\\d+\\.\\d+)(?:@(?<currentDigest>sha256:[a-f0-9]+))?\\b"
+      ]
+    },
     {
       // Update k6 version in Dockerfiles.
       "customType": "regex",
@@ -44,22 +64,6 @@
       "fileMatch": [".*\\.mk"],
       "matchStrings": [
         "(?:^|\\n)[ \\t]*K6_VERSION\\s*:=\\s*(?<currentValue>\\S+)[ \\t]*(?:$|\\n)"
-      ]
-    },
-    {
-      // Update grafana-build-tools tags across the repository.
-      "customType": "regex",
-      "depNameTemplate": "ghcr.io/grafana/grafana-build-tools",
-      "datasourceTemplate": "docker",
-      "versioningTemplate": "semver",
-      "fileMatch": [
-        "^\\.github/workflows/.*\\.ya?ml$",
-        "(^|/)Makefile$",
-        ".*\\.jsonnet$",
-        ".*\\.mk$"
-      ],
-      "matchStrings": [
-        "ghcr.io/grafana/grafana-build-tools:(?<currentValue>[\\w-+.]+)"
       ]
     },
     {
