--- a/.github/workflows/validate_pr.yaml
+++ b/.github/workflows/validate_pr.yaml
@@ -70,7 +70,7 @@ jobs:
       - name: test
         run: make test
 
-      - name: test docker build
+      - name: test docker build (no browser)
         uses: grafana/shared-workflows/actions/build-push-to-dockerhub@f0dd3480fa3e657d741dd9e8d9b999cfb61fc713
         with:
           push: false
@@ -80,3 +80,16 @@ jobs:
             type=raw,value=${{ steps.version.outputs.value }}
             type=sha,prefix=sha-,format=short
             latest
+          target: release
+
+      - name: test docker build (browser)
+        uses: grafana/shared-workflows/actions/build-push-to-dockerhub@f0dd3480fa3e657d741dd9e8d9b999cfb61fc713
+        with:
+          push: false
+          platforms: |-
+            ${{ steps.build-info.outputs.os }}/${{ steps.build-info.outputs.arch }}
+          tags: |-
+            type=raw,value=${{ steps.version.outputs.value }}-browser
+            type=sha,prefix=sha-,suffix=-browser,format=short
+            latest-browser
+          target: with-browser
