Rework workflows to support building multiple images
Signed-off-by: Marcelo E. Magallon <marcelo.magallon@grafana.com>

--- a/.github/workflows/build_and_publish_main.yaml
+++ b/.github/workflows/build_and_publish_main.yaml
@@ -1,7 +1,10 @@
 name: validate and publish commit to dev
 
 on:
-  push:
+  #push:
+  #  branches:
+  #    - main
+  pull_request:
     branches:
       - main
 
