--- a/.github/actionlint.yaml
+++ b/.github/actionlint.yaml
@@ -3,6 +3,7 @@ self-hosted-runner:
     - ubuntu-amd64
     - ubuntu-arm64
     - github-hosted-ubuntu-arm64
+    - github-hosted-ubuntu-x64-small
 
 # Configuration variables in array of strings defined in your repository or
 # organization. `null` means disabling configuration variables check.
