--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -77,37 +77,58 @@ jobs:
       - name: build
         run: make build-native
 
-      - name: lint
-        run: make lint
+#     - name: lint
+#       run: make lint
 
-      - name: test
-        run: make test
+#     - name: test
+#       run: make test
 
-      - name: test docker build (no browser)
-        uses: grafana/shared-workflows/actions/build-push-to-dockerhub@f0dd3480fa3e657d741dd9e8d9b999cfb61fc713
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3.7.1
+
+      - name: docker metadata (no brower)
+        id: docker-metadata-no-browser
+        uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5.5.1
         with:
-          push: false
           images: ${{ needs.preflight.outputs.repo_name }}
-          platforms: |-
-            ${{ steps.build-info.outputs.os }}/${{ steps.build-info.outputs.arch }}
           tags: |-
             type=raw,value=${{ steps.version.outputs.value }}
             type=sha,prefix=sha-,format=short
             latest
-          target: release
 
-      - name: test docker build (browser)
-        uses: grafana/shared-workflows/actions/build-push-to-dockerhub@f0dd3480fa3e657d741dd9e8d9b999cfb61fc713
+      - name: test docker build (no browser)
+        uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6.9.0
         with:
+          context: .
           push: false
+          tags: ${{ steps.docker-metadata-no-browser.outputs.tags }}
+          labels: ${{ steps.docker-metadata-no-browser.outputs.labels }}
+          target: release
+          load: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: docker metadata (brower)
+        id: docker-metadata-browser
+        uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5.5.1
+        with:
           images: ${{ needs.preflight.outputs.repo_name }}
-          platforms: |-
-            ${{ steps.build-info.outputs.os }}/${{ steps.build-info.outputs.arch }}
           tags: |-
             type=raw,value=${{ steps.version.outputs.value }}-browser
             type=sha,prefix=sha-,suffix=-browser,format=short
             latest-browser
+
+      - name: test docker build (browser)
+        uses: grafana/shared-workflows/actions/build-push-to-dockerhub@f0dd3480fa3e657d741dd9e8d9b999cfb61fc713
+        with:
+          context: .
+          push: false
+          tags: ${{ steps.docker-metadata-browser.outputs.tags }}
+          labels: ${{ steps.docker-metadata-browser.outputs.labels }}
           target: with-browser
+          load: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: list images
         run: |
