--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -86,73 +86,25 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3.7.1
 
-      - name: docker metadata (no brower)
-        id: docker-metadata-no-browser
-        uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5.5.1
-        with:
-          images: ${{ needs.preflight.outputs.repo_name }}
-          tags: |-
-            type=raw,value=${{ steps.version.outputs.value }}
-            type=sha,prefix=sha-,format=short
-            latest
-
       - name: test docker build (no browser)
         uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6.9.0
         with:
           context: .
           push: false
-          tags: ${{ steps.docker-metadata-no-browser.outputs.tags }}
-          labels: ${{ steps.docker-metadata-no-browser.outputs.labels }}
           target: release
-          load: true
+          outputs: type=tar,dest=dist/build-artifacts-image-${{ steps.build-info.outputs.arch }}.tar
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: docker metadata (brower)
-        id: docker-metadata-browser
-        uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81 # v5.5.1
-        with:
-          images: ${{ needs.preflight.outputs.repo_name }}
-          tags: |-
-            type=raw,value=${{ steps.version.outputs.value }}-browser
-            type=sha,prefix=sha-,suffix=-browser,format=short
-            latest-browser
-
       - name: test docker build (browser)
-        uses: grafana/shared-workflows/actions/build-push-to-dockerhub@f0dd3480fa3e657d741dd9e8d9b999cfb61fc713
+        uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6.9.0
         with:
           context: .
           push: false
-          tags: ${{ steps.docker-metadata-browser.outputs.tags }}
-          labels: ${{ steps.docker-metadata-browser.outputs.labels }}
           target: with-browser
-          load: true
+          outputs: type=tar,dest=dist/build-artifacts-image-browser-${{ steps.build-info.outputs.arch }}.tar
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-      - name: list images
-        run: |
-          echo ==== docker images
-          docker images
-          echo ==== docker container ls
-          docker container ls
-          echo ==== docker ps -a
-          docker ps -a
-
-      - name: create build artifacts
-        run: |
-          # Create a tarball of the build artifacts to preserve permissions and
-          # the directory structure. The actions/upload-artifact action will
-          # create a zip file, which cannot preserve all this information.
-          tar -C dist -cf 'dist/build-artifacts-bin-${{ steps.build-info.outputs.arch }}.tar' 'linux-${{ steps.build-info.outputs.arch }}'
-
-          BASENAME="${{ needs.preflight.outputs.repo_name }}-linux-${{ steps.build-info.outputs.arch }}"
-
-          # Create a tarball for the regular docker image.
-          ./scripts/export-docker-image '${{ needs.preflight.outputs.repo_name }}:latest' 'dist/build-artifacts-image-${{ steps.build-info.outputs.arch }}.tar'
-
-          # Create a tarball for the browser docker image.
-          ./scripts/export-docker-image '${{ needs.preflight.outputs.repo_name }}:latest-browser' 'dist/build-artifacts-image-browser-${{ steps.build-info.outputs.arch }}.tar'
 
       - name: upload build artifacts
         uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4
