--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -128,7 +128,7 @@ jobs:
       - preflight
       - validate
     if: ${{ always() && needs.validate.result == 'success' && needs.preflight.result == 'success' }}
-    runs-on: ubuntu-amd64
+    runs-on: github-hosted-ubuntu-x64-small
     outputs:
       image_name: ${{ steps.extract-image-metadata.outputs.image }}
       image_version: ${{ steps.extract-image-metadata.outputs.tag }}
@@ -195,8 +195,7 @@ jobs:
             type=raw,value=${{ needs.validate.outputs.version }}
             type=sha,prefix=sha-,format=short
             latest
-          file: Dockerfile.build
-          target: release
+          file: Dockerfile.no-browser
 
       - name: push container images to GAR (browser)
         uses: grafana/shared-workflows/actions/push-to-gar-docker@f0dd3480fa3e657d741dd9e8d9b999cfb61fc713
@@ -209,8 +208,7 @@ jobs:
             type=raw,value=${{ needs.validate.outputs.version }}-browser
             type=sha,prefix=sha-,suffix=-browser,format=short
             latest-browser
-          file: Dockerfile.build
-          target: with-browser
+          file: Dockerfile.browser
 
       - name: extract image metadata
         id: extract-image-metadata
@@ -227,7 +225,7 @@ jobs:
       - preflight
       - publish_images
     if: ${{ always() && needs.publish_images.result == 'success' && needs.preflight.result == 'success' }}
-    runs-on: ubuntu-amd64
+    runs-on: github-hosted-ubuntu-x64-small
     steps:
       # The following two steps are needed because trigger-argo-workflow is
       # calling setup-go *after* setup-argo, and setup-argo actually needs go
