--- a/Dockerfile.no-browser
+++ b/Dockerfile.no-browser
@@ -3,6 +3,6 @@ FROM --platform=$TARGETOS/$TARGETARCH scratch AS release
 ARG TARGETOS
 ARG TARGETARCH
 
-ADD ./dist/build-artifacts-image-${TARGETARCH}.tar /
+ADD ./dist/container-image-${TARGETARCH}.tar /
 
 ENTRYPOINT ["/usr/local/bin/synthetic-monitoring-agent"]
