--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -92,7 +92,7 @@ jobs:
           context: .
           push: false
           target: release
-          outputs: type=tar,dest=dist/build-artifacts-image-${{ steps.build-info.outputs.arch }}.tar
+          outputs: type=tar,dest=dist/container-image-${{ steps.build-info.outputs.os }}-${{ steps.build-info.outputs.arch }}.tar
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -102,15 +102,21 @@ jobs:
           context: .
           push: false
           target: with-browser
-          outputs: type=tar,dest=dist/build-artifacts-image-browser-${{ steps.build-info.outputs.arch }}.tar
+          outputs: type=tar,dest=dist/container-image-browser-${{ steps.build-info.outputs.os }}-${{ steps.build-info.outputs.arch }}.tar
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: upload build artifacts
+      - name: create build artfact
+        run: |
+          tar cf dist/build-artifacts-${{ steps.build-info.outputs.os }}-${{ steps.build-info.outputs.arch }}.tar \
+            dist/container-image-*.tar \
+            dist/linux-${{ steps.build-info.outputs.arch }}
+
+      - name: upload build artifact
         uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4
         with:
-          name: build-artifacts-${{ steps.build-info.outputs.arch }}
-          path: dist/build-artifacts-*.tar
+          name: build-artifacts-${{ steps.build-info.outputs.os }}-${{ steps.build-info.outputs.arch }}
+          path: dist/build-artifacts-${{ steps.build-info.outputs.os }}-${{ steps.build-info.outputs.arch }}.tar
           retention-days: 1
           if-no-files-found: error
           overwrite: false
@@ -157,23 +163,13 @@ jobs:
         # each artifact that it downloads, named afer the artifact's name.
         # That's the `build-artifacts-*` portion of the path.
         #
-        # There are two sets of artifacts: binaries and images. The first one
-        # is named build-artifacts-bin-*, the wildcard refers to the
-        # architecture of the binaries. The artifact itself consists of a
-        # single file, a tarball, and it's also named `build-artifacts-bin-*`.
-        # The tarball contains the linux-arch directory, so everything is
-        # extracted directly to the dist directory.
-        #
-        # For images, the artifact is named build-artifacts-image-*. This
-        # contains a tarball with the docker image. Move it to the dist
-        # directory to make things easier.
-        #
         # After extracting all the artifacts, this builds an output named
         # `platforms` that lists all the platforms that are available. This is
         # used by the step that builds the docker images to tell it what
         # platforms should be included.
         run: |
-          find dist/build-artifacts-*/build-artifacts-bin-*.tar -print0 | xargs -r0 -n1 -I{} tar -xvpf {} -C dist
+          find dist/build-artifacts-*/build-artifacts-*.tar -print0 |
+            xargs -r0 -I{} tar -xvpf {}
 
           {
             echo 'platforms<<EOT'
