--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -77,11 +77,11 @@ jobs:
       - name: build
         run: make build-native
 
-#     - name: lint
-#       run: make lint
+      - name: lint
+        run: make lint
 
-#     - name: test
-#       run: make test
+      - name: test
+        run: make test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3.7.1
