--- a/Dockerfile.no-browser
+++ b/Dockerfile.no-browser
@@ -1,8 +1,8 @@
-FROM --platform=$TARGETOS/$TARGETARCH scratch AS release
+FROM --platform=$TARGETOS/$TARGETARCH scratch
 
 ARG TARGETOS
 ARG TARGETARCH
 
-ADD ./dist/container-image-${TARGETARCH}.tar /
+ADD ./dist/container-image.no-browser.${TARGETOS}-${TARGETARCH}.tar /
 
 ENTRYPOINT ["/usr/local/bin/synthetic-monitoring-agent"]
