renovate: use `"enabled"` instead of `true` for `platformCommit`

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,7 +7,7 @@
 
   "branchPrefix": "grafanarenovatebot/",
   "commitMessagePrefix": "Chore: ",
-  "platformCommit": true,
+  "platformCommit": "enabled",
   "dependencyDashboard": false,
   "forkProcessing": "disabled",
   "rebaseWhen": "behind-base-branch",
