Remove release commit type from release-please
The other supported categories should account for any change that may
require a release.

--- a/.github/release-please/release-please-config.json
+++ b/.github/release-please/release-please-config.json
@@ -8,8 +8,7 @@
         { "type": "feat", "section": "Features" },
         { "type": "fix", "section": "Fixes" },
         { "type": "docs", "section": "Documentation" },
-        { "type": "chore", "section": "Miscellaneous Chores" },
-        { "type": "release", "section": "Release"}
+        { "type": "chore", "section": "Miscellaneous Chores" }
       ]
     }
   },
