feat: fetch precompiled xk6 extension from `grafana/xk6-sm` (#966)
* Dockerfiles: ADD sm-k6 from grafana/xk6-sm releases

* renovate: upgrade grafana/xk6-sm releases URLs

* make: add target to pull sm-k6 from grafana/xk6-sm repo

* renovate: update xk6-sm version in makefile

* scripts/package: source sm-k6 binary from current path

* xk6: remove source tree and make targets

* ci: call `make sm-k6` for workflows that need a k6 binary

* prober/multihttp: use k6 binary from dest repo for `make sm-k6`

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -19,13 +19,17 @@
   ],
   "customManagers": [
     {
-      // Update k6 version in Dockerfiles.
+      // Update xk6-sm
       "customType": "regex",
+      "depNameTemplate": "grafana/xk6-sm",
       "datasourceTemplate": "github-releases",
-      "depNameTemplate": "grafana/k6",
-      "fileMatch": [".*\\.mk"],
+      "versioningTemplate": "semver",
+      "fileMatch": [
+        "Dockerfile",
+        "scripts/make/sm-k6.mk"
+      ],
       "matchStrings": [
-        "(?:^|\\n)[ \\t]*K6_VERSION\\s*:=\\s*(?<currentValue>\\S+)[ \\t]*(?:$|\\n)"
+        "https://github.com/grafana/xk6-sm/releases/download/(?<currentValue>[^/]+)/"
       ]
     }
   ]
