fix: Synchronize makefiles with more recent versions
We have multiple versions of these files floating around. Synchronize
the versions in this repo with the ones elsewhere, trying to avoid too
many changes at once.

This does remove the support for "bra", which was brought over from the
grafana repo, and as far as I know, nobody is actually using here.

Followup-to: 1982d52
Signed-off-by: Marcelo E. Magallon <marcelo.magallon@grafana.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -60,7 +60,6 @@ linters:
     - sqlclosecheck
     - staticcheck
     # TODO(mem): - tagalign
-    - tenv
     - testableexamples
     # TODO(mem): - thelper
     - typecheck
@@ -85,41 +84,9 @@ linters-settings:
       - github.com/jmoiron/sqlx
   gocritic:
     enabled-checks:
-      - appendAssign
-      - argOrder
-      - assignOp
-      - badCall
-      - badCond
-      - captLocal
-      - caseOrder
-      - codegenComment
-      - commentFormatting
-      - defaultCaseOrder
-      - deprecatedComment
-      - dupArg
-      - dupBranchBody
-      - dupCase
-      - dupSubExpr
-      - elseif
-      - exitAfterDefer
-      - flagDeref
-      - flagName
-      - ifElseChain
-      - mapKey
-      - newDeref
-      - offBy1
-      - regexpMust
+      # This augments the default checks.
       - ruleguard
-      - singleCaseSwitch
-      - sloppyLen
       - stringXbytes
-      - switchTrue
-      - typeSwitchVar
-      - underef
-      - unlambda
-      - unslice
-      - valSwap
-      - wrapperFunc
     settings:
       ruleguard:
         rules: "internal/rules/rules.go"
