fix: Adjust workflow permissions
Signed-off-by: Marcelo E. Magallon <marcelo.magallon@grafana.com>

--- a/.github/workflows/build_and_publish_main.yaml
+++ b/.github/workflows/build_and_publish_main.yaml
@@ -5,13 +5,15 @@ on:
     branches:
       - main
 
-# This is needed so that pushing to GAR works.
 permissions:
   contents: none
   packages: none
 
 jobs:
   call_build_and_publish:
+    permissions:
+      contents: write # Necessary to publish artifacts
+      id-token: write # Necessary to publish to GAR
     uses: ./.github/workflows/build_and_publish.yaml
     with:
       mode: dev
