--- a/.github/workflows/build_and_publish_tag.yaml
+++ b/.github/workflows/build_and_publish_tag.yaml
@@ -12,6 +12,9 @@ permissions:
 
 jobs:
   call_build_and_publish:
+    permissions:
+      contents: write # Necessary to publish artifacts
+      id-token: write # Necessary to publish to GAR
     uses: ./.github/workflows/build_and_publish.yaml
     with:
       mode: prod
