--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -6,7 +6,6 @@ on:
         type: string
 
 permissions:
-  contents: none
   packages: none
 
 jobs:
@@ -15,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      id-token: none
     outputs:
       repo_name: ${{ steps.info.outputs.repo_name }}
     steps:
@@ -43,6 +43,7 @@ jobs:
     runs-on: github-hosted-ubuntu-${{ matrix.arch }}
     permissions:
       contents: write # needed to upload build artifacts
+      id-token: none
 
     container:
       image: ghcr.io/grafana/grafana-build-tools:v0.40.3@sha256:1e112c01108b888ae64e786e6d13a8e46c02884f94ccf784ad646d906ac97254
@@ -319,6 +320,7 @@ jobs:
     runs-on: github-hosted-ubuntu-x64-small
     permissions:
       contents: read
+      id-token: none
     steps:
       # The following two steps are needed because trigger-argo-workflow is
       # calling setup-go *after* setup-argo, and setup-argo actually needs go
