fix: Ignore google/protobuf on breaking cmd
Ignore external google/protobuf breaking changes.
Otherwise buf was reporting breaking changes in
google/protobuf/descriptor.proto.

--- a/pkg/pb/synthetic_monitoring/buf.yaml
+++ b/pkg/pb/synthetic_monitoring/buf.yaml
@@ -3,6 +3,8 @@ name: buf.build/grafana/synthetic-monitoring-agent
 breaking:
   use:
     - FILE
+  ignore:
+    - google/protobuf
 lint:
   use:
     - DEFAULT
